--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://github.com/ajramirezcodes" target="_blank"><img src="https://img.icons8.com/?size=100&id=ARy6tFUfwclb&format=png&color=ffffff"/></a>
                 <a href="mailto:ajramirez111@gmail.com" target="_blank"><img src="https://img.icons8.com/?size=100&id=86875&format=png&color=ffffff"/></a>
                 <a href=href="https://www.linkedin.com/in/andrew-ramirez-268ab1150/" target="_blank"><img src="https://img.icons8.com/?size=100&id=8808&format=png&color=ffffff"/></a>
-                <a href="uploads/Resume.pdf" target="_blank"><img src="https://img.icons8.com/?size=100&id=23882&format=png&color=ffffff"/></a>
+                <a href="Portfolio Uploads/Resume.pdf" target="_blank"><img src="https://img.icons8.com/?size=100&id=23882&format=png&color=ffffff"/></a>
             </div>
         </div>
      <div class="lg:w-2/3 lg:top-16 lg:p-6 lg:overflow-y-auto">
@@ -177,7 +177,7 @@
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
                     <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
-                        <source src="https://cdn.pixabay.com/video/2016/05/12/3188-166339073_large.mp4"></source>
+                        <source src="Portfolio Uploads/rotateArray.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
                         <h4 class="items-center text-stone-50 font-bold lg:mt-1 lg:text-sm">Rotate Array</h4>
@@ -190,7 +190,7 @@
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
                     <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
-                        <source src="https://cdn.pixabay.com/video/2016/05/12/3188-166339073_large.mp4"></source>
+                        <source src="Portfolio Uploads/longestCommonPrefix.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
                         <h4 class="items-center text-stone-50 font-bold lg:mt-1 lg:text-sm">Longest Consecutive</h4>
@@ -203,7 +203,7 @@
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
                     <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
-                        <source src="https://cdn.pixabay.com/video/2016/05/12/3188-166339073_large.mp4"></source>
+                        <source src="Portfolio Uploads/groupAnagrams.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
                         <h4 class="items-center text-stone-50 font-bold lg:mt-1 lg:text-sm">Group Anagrams</h4>
@@ -216,7 +216,7 @@
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
                     <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
-                        <source src="https://cdn.pixabay.com/video/2016/05/12/3188-166339073_large.mp4"></source>
+                        <source src="Portfolio Uploads/longestCommonPrefix.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
                         <h4 class="items-center text-stone-50 font-bold lg:mt-1 lg:text-sm">Longest Common Prefix</h4>
@@ -230,7 +230,7 @@
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
                     <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
-                        <source src="https://cdn.pixabay.com/video/2016/05/12/3188-166339073_large.mp4"></source>
+                        <source src="Portfolio Uploads/missingLetter.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
                         <h4 class="items-center text-stone-50 font-bold lg:mt-1 lg:text-sm">Find Missing Letter</h4>
