--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h4 class="lg:hidden text-stone-50 font-bold mt-[4rem] text-lg">Technical Challenges</h4>
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
-                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
+                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-none aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
                         <source src="Portfolio Uploads/rotateArray.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
@@ -189,7 +189,7 @@
             </div>
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
-                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
+                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-none aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
                         <source src="Portfolio Uploads/longestCommonPrefix.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
@@ -202,7 +202,7 @@
             </div>
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
-                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
+                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-none aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
                         <source src="Portfolio Uploads/groupAnagrams.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
@@ -215,7 +215,7 @@
             </div>
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
-                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
+                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-none aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
                         <source src="Portfolio Uploads/longestCommonPrefix.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
@@ -229,7 +229,7 @@
             </div>
             <div id="problem-card" class="problem-card space-y-4 max-w-lg">
                 <div class="space-y-8 lg:space-y-0 lg:flex items-start gap-11">
-                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-cover aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
+                    <video class="hover-video transition-transform duration-500 lg:hover:scale-125 object-none aspect-video w-[calc(125%-10rem)] h-[15rem] lg:w-[36rem] lg:h-[9rem] mt-[6px] border-solid border-slate-800 border-2 rounded-md" muted playsinline controls>
                         <source src="Portfolio Uploads/missingLetter.mp4"></source>
                     </video>
                     <div class="space-y-4 lg:flex lg:flex-col lg:space-y-1">
