--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </nav>
             <div id="links" class="lg:mt-0 mt-[2rem] flex gap-4">
                 <a href="https://github.com/ajramirezcodes" target="_blank"><img src="https://img.icons8.com/?size=100&id=ARy6tFUfwclb&format=png&color=ffffff"/></a>
-                <a href="mailto:ajramirez111@gmail.com" target="_blank"><img src="https://img.icons8.com/?size=100&id=86875&format=png&color=ffffff"/></a>
-                <a href=href="https://www.linkedin.com/in/andrew-ramirez-268ab1150/" target="_blank"><img src="https://img.icons8.com/?size=100&id=8808&format=png&color=ffffff"/></a>
+                <a href="mailto:ajramirez111@gmail.com"><img src="https://img.icons8.com/?size=100&id=86875&format=png&color=ffffff"/></a>
+                <a href="https://www.linkedin.com/in/andrew-ramirez-268ab1150/" target="_blank"><img src="https://img.icons8.com/?size=100&id=8808&format=png&color=ffffff"/></a>
                 <a href="Portfolio Uploads/Resume.pdf" target="_blank"><img src="https://img.icons8.com/?size=100&id=23882&format=png&color=ffffff"/></a>
             </div>
         </div>
